# aco_ui

./: .gitignore  add_pythonpath.sh  app.py  local.env  pyproject.toml  settings.py
db/: mongo.py
helpers/: configure_logging.py  group.py  save_article_id.py  ws.py
models/: aco.py  file.py  oeaz_structured.py  sis.py
search/: elastic.py
static/: styles.css  styles_old.css
templates/: article_detail.html  detail_aco.html  detail_oeaz.html  footer.html  header.html  index.html  index_aco.html  index_oeaz.html  login.html  pagination.html  tree.html  typeahead.html
